--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Copyright 2014 - The CyanogenMod Project
 
-Common device configuration for Samsung Galaxy S III Neo.
+Common device configuration for Samsung Galaxy Grand 2.
 
 WORK IN PROGRESS. WILL EAT YOUR CAT.
